@@ -538,6 +538,7 @@ def test_popup_update_controls(manager):
         """
         from libqtile import widget
         from qtile_extras.popup.toolkit import (
+            PopupCircularProgress,
             PopupRelativeLayout,
             PopupText,
             PopupSlider
@@ -562,6 +563,14 @@ def test_popup_update_controls(manager):
                     value=0.5,
                     name="slider1"
                 ),
+                PopupCircularProgress(
+                    pos_x=0.9,
+                    pos_y=0.9,
+                    width=0.1,
+                    height=0.1,
+                    value=0.25,
+                    name="progress1"
+                )
             ],
             margin=0
         )
@@ -577,8 +586,9 @@ def test_popup_update_controls(manager):
     assert info["controls"][1]["value"] == 0.5
 
     # Update controls
-    _, out = manager.c.eval("self.popup.update_controls(textbox1='New Text', slider1=0.8)")
+    _, out = manager.c.eval("self.popup.update_controls(textbox1='New Text', slider1=0.8, progress1=1)")
     _, info = manager.c.eval("self.popup.info()")
     info = eval(info)
     assert info["controls"][0]["text"] == "New Text"
     assert info["controls"][1]["value"] == 0.8
+    assert info["controls"][2]["value"] == 1.0
